[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/Objects/Player/player.gd" type="Script" id=1]
[ext_resource path="res://World/Objects/Player/player.obj" type="ArrayMesh" id=2]
[ext_resource path="res://World/Focus_Controller/Focus_Target/Focus_Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Objects/Components/Power_Collector/Power_Collector.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Objects/Components/Power_Container/Power_Container.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Objects/Components/Power_Container/Receptacle/Receptacle.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Objects/Components/Beam/Beam.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Objects/Components/Blaster/Blaster.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/UI/Element_Meter/Element_Meter_TX/Element_Meter_TX.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Objects/Player/charging.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape" id=1]
radius = 0.256371
height = 0.505643

[sub_resource type="SphereShape" id=2]
radius = 0.75

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.502184, 0 )
shape = SubResource( 1 )

[node name="Focus_Target" parent="." instance=ExtResource( 3 )]

[node name="Power_Collector" parent="." instance=ExtResource( 4 )]

[node name="Power_Container" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
_max_capacity = 5

[node name="Oora" parent="Power_Container" instance=ExtResource( 6 )]

[node name="Unda" parent="Power_Container" instance=ExtResource( 6 )]
_type = 1

[node name="Kyda" parent="Power_Container" instance=ExtResource( 6 )]
_type = 2

[node name="Cyra" parent="Power_Container" instance=ExtResource( 6 )]
_type = 3

[node name="Flora" parent="Power_Container" instance=ExtResource( 6 )]
_type = 4

[node name="Erda" parent="Power_Container" instance=ExtResource( 6 )]
_type = 5

[node name="Beam" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Blaster" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Element_Meter_TX" parent="." instance=ExtResource( 9 )]

[node name="Charging_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.49
mix_target = 2

[node name="Mouse_Picking_Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
input_ray_pickable = true

[node name="CollisionShape" type="CollisionShape" parent="Mouse_Picking_Area"]
shape = SubResource( 2 )

[connection signal="targeted" from="Focus_Target" to="Power_Container" method="_on_Focus_Target_targeted"]
[connection signal="mouse_entered" from="Mouse_Picking_Area" to="Focus_Target" method="_on_targeted"]
[connection signal="mouse_exited" from="Mouse_Picking_Area" to="Focus_Target" method="_on_detargeted"]
